Updates for ctakes wiki auto-creator.